FIX (headings) spacing issues

--- a/src/patterns/heading-section/_heading-section.scss
+++ b/src/patterns/heading-section/_heading-section.scss
@@ -5,7 +5,7 @@
 
 .heading-section__heading {
     
-        margin-top: 0;
+        margin-top: 0 !important;
 
         &::before {
             background-color: $sta-grey;
